fix(import): support NEODATA preview workflow
